[tool.poetry]
name = "pyserv"
version = "0.1.0"
description = ""
authors = ["Léni Gauffier <lenigauffier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
betterproto = {extras = ["compiler"], version = "^2.0.0b6", allow-prereleases = true}
grpclib = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
